--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap');
 @import url('grid.css');
 
-
-
 :root {
     --prim-txt-color: #fff;
     --sec-txt-color: #da0;
@@ -19,50 +17,92 @@
     --button-txt-color: #fff;
 
     --border-color: #600;
-    --focus-border-color: #505;
+    --focus-border-color: #909;
+    
+    --title-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    --prim-text-font-family: 'Century Gothic';
+    --sec-text-font-family: 'Sawarabi Gothic', sans-serif; 
 }
 
-html {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    /* font-family: "Century Gothic"; */
-    /* font-family: 'Sawarabi Gothic', sans-serif; */
+::-webkit-scrollbar              {
+    background-color: var(--border-color);
+    width: 10px;
+}
+::-webkit-scrollbar-thumb        {
+    background-color: var(--sec-bg-color);
+    border-radius: 8px;
 }
 
 body {
     background-color: var(--prim-bg-color);
     color: var(--prim-txt-color);
+    font-family: var(--prim-text-font-family); 
+    overflow-x: hidden;
 }
 
-.input {
-    border-radius: 6px;
-    outline: none;
+h1, h2, h3, h4, h5, h6, input {
+    font-family: var(--title-font-family)
+}
+
+a {
+    text-decoration: none;
+    color: var(--prim-txt-color);
+}
+
+a:hover {
+    color: var(--sec-txt-color)
+}
+
+.input, .input:focus {
+    border-radius: 0.3em;
     border: solid 1px var(--border-color);
     background-color: var(--ter-bg-color);
-    color: var(--button-txt-color);   
+    color: var(--button-txt-color);
+    font-family: var(--prim-text-font-family); 
+    padding: 0 10px;
+}
+
+:focus-visible {
+    outline: solid 2px var(--focus-border-color);
 }
 
 .button {
     background-color: var(--button-bg-color);
-    border-radius: 6px;
+    border-radius: 0.3em;
     border: solid 1px var(--border-color);
 }
 
-.sqrbutton {
+.button:hover {
+    background-color: var(--hover-button-bg-color);
+    cursor: pointer;
+}
+
+.sqrform {
     width: 3em;
     height: 3em;
+    padding: 0;
+    overflow: hidden;
 }
+
+.background {
+    gap: 24px;
+    width: 100vw;
+}    
 
 .topbar {
     width: 100vw;
-    padding: 4px;
+    padding: 4px 0;
     align-items: center;
-    position: fixed;
+    position: sticky;
+    top: 0;
     background-color: var(--prim-bg-color);
     box-shadow: 0px 0px 10px var(--ter-bg-color);
 }
 
-.logo {
+.divlogo {
     padding-left: 30px;
+    align-items: center;
+    display: flex;
 }
 
 .topsearch,
@@ -70,4 +110,50 @@ body {
     display: flex;
     justify-content: center;
     gap: 2px;
+}
+
+.pagebody {
+    gap: 24px;
+    height: max-content;
+    padding: 24px 64px;
+}
+
+.profile, .interactions, .conections {
+    border: solid 1px var(--border-color);
+    height: 1500px;
+    display: block;
+}
+
+.cover_cont {
+    width: 100%;
+    height: 100px;
+    background-color: var(--sec-bg-color);
+    overflow: hidden;
+}
+
+.cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.avatar_cont {
+    width: 128px;
+    height: 128px;
+    border: solid 3px white;
+    position: relative;
+    top: -50px;
+    margin: auto;
+    border-radius: 3px;
+}
+
+.search_svg path {
+    fill: var(--ter-bg-color);
+}
+
+.reddot {
+    fill: var(--prim-bg-color);
+    position: relative;
+    top: -18px;
+    right: -3px;
 }
