--- a/grid.css
+++ b/grid.css
@@ -1,3 +1,16 @@
+
+@media screen and (min-width: 992px) {
+  .npifmd {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .npifsm {
+    display: none;
+  }
+}
+
 .row,
 .grid {
   display: grid;
@@ -43,7 +56,7 @@
   .col-sm-1 {
     grid-column: span 1;
   }
- 
+
   .d-sm-none {
     display: none;
   }
