--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /*==================================== FORMATAÇÕES GERAIS ====================================*/
 .background {
     position: relative;
-    overflow: auto  ;
+    overflow: auto;
 }
 
 :root {
@@ -87,12 +87,18 @@ a:hover {
 
 .input,
 .input:focus {
+    width: 300px;
+    line-height: 44px;
     border-radius: 4px;
     border: solid 1px var(--border-color);
     background-color: var(--ter-bg-color);
     color: var(--button-txt-color);
     font-family: var(--prim-text-font-family);
-    padding: 0 20px;
+    /* padding: 0 20px; */
+}
+
+.input::placeholder {
+    text-indent: 10px;
 }
 
 :focus-visible {
@@ -103,7 +109,6 @@ a:hover {
     background-color: var(--button-bg-color);
     border-radius: 4px;
     border: solid 1px var(--border-color);
-    height: 1.5em;
 }
 
 .button:hover {
@@ -112,27 +117,36 @@ a:hover {
 }
 
 .sqrform {
-    width: 3em;
-    height: 3em;
+    width: 48px;
+    height: 48px;
     padding: 0;
     overflow: hidden;
 }
 
 /*==================================== BARRA DO TOPO ====================================*/
 .topbar {
-    width: 100vw;
+    width: 100%;
+    height: 64px;
     align-items: center;
-    position: sticky;
-    top: 0;
-    padding: 6px 0;
+    position: fixed;
+    /* top: 0; */
+    padding: 0 16px;
     background-color: var(--prim-bg-color);
     box-shadow: 0px 0px 10px var(--ter-bg-color);
     z-index: 1;
+    box-sizing: border-box;
+}
+
+.divlogo {
+    border-radius: 6px;
+    width: 200px;
+    height: 50px;
 }
 
 .mt_logo {
     border-radius: 6px;
-    margin: 0 16px;
+    height: 100%;
+    width: 100%;
 }
 
 .topsearch,
@@ -141,7 +155,8 @@ a:hover {
     justify-content: right;
     gap: 2px;
     padding-right: 26px;
-}    
+    align-items: center;
+}
 
 svg path {
     fill: var(--principal-bg-color);
@@ -164,22 +179,22 @@ svg path {
 
 /*==================================== SEÇÕES - GERAL ====================================*/
 .pagebody {
-    margin: 24px 64px 24px 64px;
-}    
+    margin: 88px 64px 24px 64px;
+}
 
 .profile {
     background-color: var(--principal-bg-color);
     border: solid 1px var(--border-color);
-}    
+}
 
 .interactions,
 .conections {
     border-radius: 8px;
-}    
+}
 
 .interactions {
     border: none;
-}    
+}
 
 /*==================================== SEÇÃO 1 - PERFIL ====================================*/
 .cover_cont {
@@ -188,25 +203,25 @@ svg path {
     background-color: var(--sec-bg-color);
     border-radius: 8px;
     overflow: hidden;
-}    
+}
 
 .cover {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}    
+}
 
 .avatar_cont {
     position: relative;
     top: -50px;
-}    
+}
 
 .avatar {
     display: flex;
     margin: auto;
     border: solid 3px white;
     border-radius: 4px;
-}    
+}
 
 .profile_name {
     text-align: center;
@@ -322,7 +337,8 @@ a:visited>.lgbtn {
     justify-content: space-between;
 }
 
-.formbase p, .formbase button {
+.formbase p,
+.formbase button {
     font-size: 0.75em;
 }
 
@@ -397,9 +413,11 @@ a:visited>.lgbtn {
     justify-content: space-between;
     margin: 12px 0;
 }
+
 /*==================================== SEÇÃO 3 ====================================*/
 
-.like_you, .booming {
+.like_you,
+.booming {
     display: grid;
     padding: 6px 12px;
     gap: 8px;
@@ -412,7 +430,7 @@ a:visited>.lgbtn {
     padding: 0;
 }
 
-.like_you > a > button  {
+.like_you>a>button {
     justify-content: center;
 }
 
@@ -455,14 +473,22 @@ a:visited>.lgbtn {
     display: none;
 }
 
-@media screen and (min-width: 0px) {
+@media screen and (min-width: 992px) {
+    .ndifsm {
+        display: initial;
+    }
+}
+
+@media screen and (min-width: 1200px) {
     .ndifmd {
         display: initial;
     }
 }
 
-@media screen and (min-width: 992px) {
-    .ndifsm {
-        display: initial;
+@media screen and (max-width: 991px) {
+    .alogo {
+        overflow: hidden;
+        width: 52px;
+        border-radius: 6px;
     }
 }
